<resources>
    <string name="app_name">RecipeBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_name">RecipeName</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="allergens">Allergens</string>
    <string name="min">min</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="filter_recipes">Filter recipes</string>
    <string name="select_meat">Select Meat</string>
    <string name="select_cousine">Select Cousine</string>
    <string name="select_allergen">Select Allergens</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="Add">Add</string>
    <string name="add_your_recipe">Add your recipe</string>
    <string name="recipe_name">Recipe name:</string>
    <string name="name_of_your_recipe">Name of your recipe...</string>
    <string name="time_of_preparation">Time of preparation:</string>
    <string name="e_g_0">e.g. 0</string>
    <string name="minutes">minutes</string>
    <string name="servings">Servings:</string>
    <string name="servs">servings</string>
    <string name="ingreds">Ingredients:</string>
    <string name="e_g_milk_30dl">e.g. milk 30dl...</string>
    <string name="ingredient">ingredient...</string>
    <string name="quantity">quantity...</string>
    <string name="instructs">Instructions:</string>
    <string name="write_the_instructions_here">Write the instructions here...</string>
    <string name="select_one_allergen">Select Allergen</string>
    <string name="recipe_name_">Recipe name</string>
    <string name="cousine">HUNGARIAN</string>
    <string name="time_">30 min</string>
    <string name="servings_">3</string>
    <string name="allergs_">bla, bla, bla, bla</string>
    <string name="ingreds_">bla 30dl \nblab 2ml\nlol 5tlsp\nble 3db</string>
    <string name="instructs_">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="allRecipes">All Recipes</string>
    <string name="clear_filters">Clear Filters</string>
</resources>