<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.addFragment"
    android:background="@color/gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="13"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:background="@color/gray">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="6">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/recipe_name"
                        style="@style/ThemeOverlay.SubTitle"/>
                    <EditText
                        android:id="@+id/recipeName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        style="@style/ThemeOverlay.InputText"
                        android:hint="@string/name_of_your_recipe"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/select_cousine"
                    app:boxBackgroundColor="@color/white">
                    <AutoCompleteTextView
                        android:id="@+id/cousine_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/select_meat"
                    app:boxBackgroundColor="@color/white"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    >
                    <AutoCompleteTextView
                        android:id="@+id/meat_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:weightSum="6">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/time_of_preparation"
                        style="@style/ThemeOverlay.SubTitle"/>
                    <EditText
                        android:id="@+id/preptime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:hint="@string/e_g_0"
                        style="@style/ThemeOverlay.InputText"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginStart="10dp"
                        android:text="@string/minutes"
                        style="@style/ThemeOverlay.Text"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:weightSum="8">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/servings"
                        style="@style/ThemeOverlay.SubTitle"/>
                    <EditText
                        android:id="@+id/servings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        style="@style/ThemeOverlay.InputText"
                        android:hint="@string/e_g_0"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:layout_marginStart="10dp"
                        android:text="@string/servs"
                        style="@style/ThemeOverlay.Text"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/upload_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/photo"
                    android:background="@color/white"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/allergenSelector"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@android:drawable/editbox_background"
                    android:drawablePadding="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:theme="@style/ThemeOverlay.SubTitle"
                    android:hint="@string/select_allergen"
                    android:textSize="16sp"
                    android:padding="12dp"
                    app:drawableEndCompat="@android:drawable/arrow_down_float" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:weightSum="10">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/ingreds"
                        style="@style/ThemeOverlay.SubTitle"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/allIngredients"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/e_g_milk_30dl"
                            android:paddingBottom="5dp"
                            style="@style/ThemeOverlay.Text"
                            android:inputType="none"
                            tools:ignore="NestedWeights" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:weightSum="5">
                            <EditText
                                android:id="@+id/ingredient"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:layout_marginEnd="10dp"
                                android:hint="@string/ingredient"
                                style="@style/ThemeOverlay.InputText"/>
                            <EditText
                                android:id="@+id/quantity"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:layout_marginEnd="10dp"
                                android:hint="@string/quantity"
                                style="@style/ThemeOverlay.InputText"/>
                            <ImageButton
                                android:id="@+id/addButton"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/white"
                                android:src="@drawable/ic_baseline_add_24"/>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/instructs"
                        style="@style/ThemeOverlay.SubTitle"/>

                    <EditText
                        android:id="@+id/instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        style="@style/ThemeOverlay.InputText"
                        android:hint="@string/write_the_instructions_here"
                        />
                </LinearLayout>



            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"

            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/darkgray"
                android:text="@string/cancel"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addRecipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/green"
                android:text="@string/Add"/>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>