<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.detailsFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:weightSum="14">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@drawable/underline"
        android:weightSum="5">
        <TextView
            android:id="@+id/recipeName"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAlignment="textStart"
            android:layout_marginBottom="5dp"
            style="@style/ThemeOverlay.Title"
            tools:text="@string/recipe_name_"
            tools:ignore="NestedWeights" />
        <ImageView
            android:id="@+id/bookmark"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_baseline_bookmark_border_24"
            tools:ignore="ContentDescription" />
        <ImageView
            android:id="@+id/close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_baseline_close_24"
            tools:ignore="ContentDescription" />
    </LinearLayout>




    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/cousine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                style="@style/ThemeOverlay.SubTitle"
                android:textSize="22sp"
                android:layout_margin="10dp"
                tools:text="@string/cousine"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="2">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_access_time_40"
                        tools:ignore="ContentDescription,NestedWeights" />
                    <TextView
                        android:id="@+id/preptime"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        style="@style/ThemeOverlay.SubTitle"
                        android:textSize="22sp"
                        tools:text="@string/time_"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:weightSum="2">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_people_outline_40"
                        tools:ignore="ContentDescription,NestedWeights" />
                    <TextView
                        android:id="@+id/servings"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        style="@style/ThemeOverlay.SubTitle"
                        android:textSize="22sp"
                        tools:text="@string/servings_"/>

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="10dp"
                android:src="@drawable/food"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/allergensText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="@style/ThemeOverlay.SubTitle"
                android:text="@string/allergens"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/AllergCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp">
                <TextView
                    android:id="@+id/allergens"
                    android:layout_margin="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/ThemeOverlay.Text"
                    android:textAlignment="center"
                    tools:text="@string/allergs_"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/ingredientsText"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                style="@style/ThemeOverlay.SubTitle"
                android:text="@string/ingredients"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/IngredCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp">
                <TextView
                    android:id="@+id/ingredients"
                    android:layout_margin="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    style="@style/ThemeOverlay.Text"
                    tools:text="@string/ingreds_"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/instructionText"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                style="@style/ThemeOverlay.SubTitle"
                android:text="@string/instructions"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/prepCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp">
                <TextView
                    android:id="@+id/preparation"
                    android:layout_margin="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ThemeOverlay.Text"
                    tools:text="@string/instructs_"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
</FrameLayout>
